[project]
name = "ysda-mdm"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "transformers[sentencepiece] (>=4.51.3,<5.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "einops (>=0.8.1,<0.9.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
